[options]
python_requires = >=3.8

[flake8]
max-line-length = 120
exclude = .eggs,env
#ignore = E121,E123,E126,E226,E24,E704,W503,W504,E203

[pep8]
max-line-length = 120

[tool:pytest]
junit_family = xunit1

[coverage:report]
show_missing = true
skip_covered = true

[coverage:run]
branch = True
source = emcache

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 120
skip = .eggs,env,benchmark
