[options]
python_requires = >=3.8

[flake8]
max-line-length = 120
extend-exclude = venv,.venv
# W503 and E203 is not pep8 compliant, and it conflicts with how black formats the code
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
ignore = W503, E203
#ignore = E121,E123,E126,E226,E24,E704,W503,W504,E203

[pep8]
max-line-length = 120

[tool:pytest]
junit_family = xunit1

[coverage:report]
show_missing = true
skip_covered = true

[coverage:run]
branch = True
source = emcache

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 120
extend_skip = benchmark
