[metadata]
name = emcache
version = attr: version.__version__
author = Pau Freixes
author_email = pfreixes@gmail.com
maintainer = emcache
url = https://github.com/emcache/emcache.git
description = A high performance asynchronous Python client for Memcached with full batteries included
long_description = file: README.rst, CHANGELOG.rst, LICENSE.txt
keywords = async memcached client
license = MIT
classifiers =
    "Development Status :: 5 - Production/Stable"
    "Intended Audience :: Developers"
    "License :: OSI Approved :: MIT License"
    "Operating System :: MacOS"
    "Operating System :: POSIX"
    "Operating System :: Unix"
    "Programming Language :: Python :: 3 :: Only"
    "Programming Language :: Python :: 3.8"
    "Programming Language :: Python :: 3.9"
    "Programming Language :: Python :: 3.10"
    "Programming Language :: Python :: 3.11"
    "Programming Language :: Python :: 3.12"
    "Topic :: Software Development :: Libraries"
project_urls =
    Bug Tracker = https://github.com/emcache/emcache/issues
    Changelog = https://github.com/emcache/emcache/blob/master/CHANGELOG.md

[options]
zip_safe = False
include_package_data = True
package_dir=
    =emcache
packages = find:
python_requires = >=3.8
install_requires =
    Cython
setup_requires =
    setuptools

[options.package_data]
emcache = py.typed

[options.packages.find]
where=emcache

[options.extras_require]
dev =
    pytest==8.2.2
    pytest-mock==3.14.0
    pytest-asyncio==0.11.0
    coverage==7.5.4
    black==24.4.2
    isort==5.13.2
    flake8==7.1.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
extend-exclude = venv,.venv
# W503 and E203 is not pep8 compliant, and it conflicts with how black formats the code
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
ignore = W503, E203
#ignore = E121,E123,E126,E226,E24,E704,W503,W504,E203

[pep8]
max-line-length = 120

[coverage:report]
show_missing = true
skip_covered = true

[coverage:run]
branch = True
source = emcache

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 120
extend_skip = benchmark
